--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -173,19 +173,19 @@ color: #fff!important;
 /*修改滚动条样式*/
 div::-webkit-scrollbar,
 html::-webkit-scrollbar {
-  width:8px;
-  height:10px;
+  width:8Px;
+  height:10Px;
   /**/
 }
 div::-webkit-scrollbar-track,
 html::-webkit-scrollbar-track {
   background: #272a35;
-  border-radius:2px;
+  border-radius:2Px;
 }
 div::-webkit-scrollbar-thumb,
 html::-webkit-scrollbar-thumb {
   background: #99a8b6;
-  border-radius:10px;
+  border-radius:10Px;
 }
 div::-webkit-scrollbar-thumb:hover,
 html::-webkit-scrollbar-thumb:hover {
