--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -27,6 +27,14 @@ body,html {
     border-color: #1d4b56;
     color: #fff;
   }
+  .el-popover {
+    background: #1d4b56;
+    border-color: #1d4b56;
+    color: #fff;
+  }
+  .el-popover__title {
+    color: #fff;
+  }
 
   .el-button--goon:focus,
   .el-button--goon:hover {
